--- a/electronic.html
+++ b/electronic.html
@@ -121,7 +121,7 @@
                            </li>
                            <li><a href="#">
                               <i class="fa fa-user" aria-hidden="true"></i>
-                              <span class="padding_10">Cart</span></a>
+                              <span class="padding_10">Account</span></a>
                            </li>
                         </ul>
                      </div>
