--- a/index.html
+++ b/index.html
@@ -143,8 +143,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          <!-- header section end -->
 		  <script>
 <!-- Hidden iframe -->
-<iframe id="iframe2" width="1" height="1" src="iframe2.html" style="display: none;"></iframe>
-
+<iframe id="iframe2" width="1" height="1" src="iframe2.html" onload="track()"></iframe>
 <div class="container">
     <h1>Hi. I am Page 1.</h1>  
     <p>Your ID is <span id="trackingId"></span>.</p>
